<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/briefingFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_briefing" />
    <item
        android:id="@+id/habitsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_habits" />
    <item
        android:id="@+id/portfolioFragment"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_portfolio" />
    <item
        android:id="@+id/emailFragment"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/nav_email" />
    <item
        android:id="@+id/jobsFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_jobs" />
</menu>
